--- a/index-all.html
+++ b/index-all.html
@@ -17558,6 +17558,10 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/utils/MathUtils.html#statC(double[])">statC(double[])</a></span> - Static method in class mitiv.utils.<a href="./mitiv/utils/MathUtils.html" title="class in mitiv.utils">MathUtils</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/ReverseCommunicationOptimizer.html#status">status</a></span> - Variable in class mitiv.optim.<a href="./mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></dt>
+<dd>
+<div class="block">Reason of failure.</div>
+</dd>
 <dt><span class="strong"><a href="./mitiv/utils/MathUtils.html#std(double[])">std(double[])</a></span> - Static method in class mitiv.utils.<a href="./mitiv/utils/MathUtils.html" title="class in mitiv.utils">MathUtils</a></dt>
 <dd>
 <div class="block">Standard deviation of an 1d array σ</div>
@@ -18292,6 +18296,10 @@
 <dl>
 <dt><span class="strong"><a href="./mitiv/utils/ColorMap.html#table">table</a></span> - Variable in class mitiv.utils.<a href="./mitiv/utils/ColorMap.html" title="class in mitiv.utils">ColorMap</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/ReverseCommunicationOptimizer.html#task">task</a></span> - Variable in class mitiv.optim.<a href="./mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></dt>
+<dd>
+<div class="block">Pending task for the caller.</div>
+</dd>
 <dt><span class="strong"><a href="./mitiv/tests/MinPack1Tests.html#TEST18_NMAX">TEST18_NMAX</a></span> - Static variable in class mitiv.tests.<a href="./mitiv/tests/MinPack1Tests.html" title="class in mitiv.tests">MinPack1Tests</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="./mitiv/array/TestArray.html" title="class in mitiv.array"><span class="strong">TestArray</span></a> - Class in <a href="./mitiv/array/package-summary.html">mitiv.array</a></dt>
@@ -20090,6 +20098,16 @@
 <dt><span class="strong"><a href="./mitiv/optim/LBFGSOperator.html#updates">updates</a></span> - Variable in class mitiv.optim.<a href="./mitiv/optim/LBFGSOperator.html" title="class in mitiv.optim">LBFGSOperator</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/microscopy/WideFieldModel.html#use_depth_scaling">use_depth_scaling</a></span> - Variable in class mitiv.microscopy.<a href="./mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/ArmijoLineSearch.html#useDerivative()">useDerivative()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/ArmijoLineSearch.html" title="class in mitiv.optim">ArmijoLineSearch</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/LineSearch.html#useDerivative()">useDerivative()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></dt>
+<dd>
+<div class="block">Check whether directional derivatives are needed by the line search.</div>
+</dd>
+<dt><span class="strong"><a href="./mitiv/optim/MoreThuenteLineSearch.html#useDerivative()">useDerivative()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim">MoreThuenteLineSearch</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/optim/NonmonotoneLineSearch.html#useDerivative()">useDerivative()</a></span> - Method in class mitiv.optim.<a href="./mitiv/optim/NonmonotoneLineSearch.html" title="class in mitiv.optim">NonmonotoneLineSearch</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/linalg/shaped/RealComplexFFT.html#useSystemArrayCopy">useSystemArrayCopy</a></span> - Variable in class mitiv.linalg.shaped.<a href="./mitiv/linalg/shaped/RealComplexFFT.html" title="class in mitiv.linalg.shaped">RealComplexFFT</a></dt>
 <dd>&nbsp;</dd>
