--- a/mitiv/optim/MoreThuenteLineSearch.html
+++ b/mitiv/optim/MoreThuenteLineSearch.html
@@ -166,6 +166,12 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <div class="block">Protected method to set internals at the start of a line search.</div>
 </td>
 </tr>
+<tr class="altColor">
+<td class="colFirst"><code>boolean</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/MoreThuenteLineSearch.html#useDerivative()">useDerivative</a></strong>()</code>
+<div class="block">Check whether directional derivatives are needed by the line search.</div>
+</td>
+</tr>
 </table>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_mitiv.optim.LineSearch">
@@ -214,6 +220,22 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <!--   -->
 </a>
 <h3>Method Detail</h3>
+<a name="useDerivative()">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>useDerivative</h4>
+<pre>public&nbsp;boolean&nbsp;useDerivative()</pre>
+<div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../mitiv/optim/LineSearch.html#useDerivative()">LineSearch</a></code></strong></div>
+<div class="block">Check whether directional derivatives are needed by the line search.</div>
+<dl>
+<dt><strong>Specified by:</strong></dt>
+<dd><code><a href="../../mitiv/optim/LineSearch.html#useDerivative()">useDerivative</a></code>&nbsp;in class&nbsp;<code><a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></code></dd>
+<dt><span class="strong">Returns:</span></dt><dd>A boolean value, true if the line search needs the
+ directional derivative of the objective function.</dd></dl>
+</li>
+</ul>
 <a name="startHook()">
 <!--   -->
 </a>
