--- a/mitiv/optim/ReverseCommunicationOptimizer.html
+++ b/mitiv/optim/ReverseCommunicationOptimizer.html
@@ -193,8 +193,20 @@ extends java.lang.Object</pre>
 </td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><code>protected <a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a></code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#status">status</a></strong></code>
+<div class="block">Reason of failure.</div>
+</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><code>static int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#SUCCESS">SUCCESS</a></strong></code>&nbsp;</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><code>protected <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#task">task</a></strong></code>
+<div class="block">Pending task for the caller.</div>
+</td>
 </tr>
 </table>
 </li>
@@ -342,6 +354,26 @@ extends java.lang.Object</pre>
 <h4>FAILURE</h4>
 <pre>public static final&nbsp;int FAILURE</pre>
 <dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.optim.ReverseCommunicationOptimizer.FAILURE">Constant Field Values</a></dd></dl>
+</li>
+</ul>
+<a name="task">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>task</h4>
+<pre>protected&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> task</pre>
+<div class="block">Pending task for the caller.</div>
+</li>
+</ul>
+<a name="status">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>status</h4>
+<pre>protected&nbsp;<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a> status</pre>
+<div class="block">Reason of failure.</div>
 </li>
 </ul>
 <a name="evaluations">
