--- a/mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html
+++ b/mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html
@@ -135,7 +135,7 @@ extends <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="cl
 <!--   -->
 </a>
 <h3>Fields inherited from class&nbsp;mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></h3>
-<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#evaluations">evaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterations">iterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restarts">restarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#SUCCESS">SUCCESS</a></code></li>
+<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#evaluations">evaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterations">iterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restarts">restarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#status">status</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#SUCCESS">SUCCESS</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#task">task</a></code></li>
 </ul>
 </li>
 </ul>
